# cpp-parallel-nn

./: CMakeLists.txt  README.md  tensor.hpp
cuda/: matmul.cu
include/: matmul.hpp  nn.hpp  tensor.hpp  timer.hpp
src/: bench.cpp  bench_matmul.cpp  matmul.cpp  matmul.cpp.bak  nn.cpp  train_mlp.cpp
